# guidelines-vs-traditional-prompt

./: .gitignore  COMPARISON.md  CORS_CONFIGURATION.md  FILES_TO_COMMIT.md  PRODUCTION_BUILD_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  README.md  SETUP_GUIDE.md  api_server.py  check_ports.ps1  ecosystem.config.cjs  guidelines-vs-traditional-prompt.case-study.json  pyproject.toml
backend/: .env.example  api_server.py  config.py  demo_comparison.py  env.example  parlant_agent_server.py  parlant_client_utils.py  pyproject.toml  requirements.txt  traditional_llm_prompt.py
frontend/: README.md  demo.html  env.example  index.html  next.config.js  package-lock.json  package.json  styles.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Footer.tsx
frontend/app/demo/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
parlant/: Dockerfile  README.md  env.example  nixpacks.toml  parlant_agent_server.py  parlant_client_utils.py  pyproject.toml  requirements.txt
static/: app.js  index.html  styles.css
